--- a/src/2. Classical ML Methods/elena/SVM_tfidf_v4_grid.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_tfidf_v4_grid.ipynb
@@ -2,29 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "\n",
-    "\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
     "import vectorize_functions\n",
-    "\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import GridSearchCV, train_test_split, cross_val_score\n",
+    "from sklearn.datasets import make_classification\n"
    ]
   },
   {
@@ -171,15 +160,8 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "# Initialize an empty list to store results\n",
     "results_list = []\n",
     "\n",
-    "# Define parameter grid\n",
     "param_grid = {\n",
     "    'kernel': ['linear', 'sigmoid'],\n",
     "    'degree': [3, 4, 5],\n",
@@ -189,27 +171,20 @@
     "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}]\n",
     "}\n",
     "\n",
-    "# Initialize SVM model\n",
     "svm = SVC()\n",
     "\n",
-    "# Initialize GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=svm, param_grid=param_grid, scoring='f1', cv=3, verbose=2, n_jobs=-1)\n",
     "\n",
-    "# Fit GridSearchCV\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Loop through all the parameter combinations and calculate metrics\n",
     "for params in grid_search.cv_results_['params']:\n",
-    "    # Get the model for this configuration\n",
-    "    best_model = grid_search.best_estimator_\n",
+    "    model = SVC(**params)  \n",
+    "    model.fit(X_train, y_train)  \n",
     "\n",
-    "    # Predict on training data\n",
-    "    y_train_pred = best_model.predict(X_train)\n",
+    "    y_train_pred = model.predict(X_train)\n",
     "\n",
-    "    # Predict on test data\n",
-    "    y_test_pred = best_model.predict(X_test)\n",
+    "    y_test_pred = model.predict(X_test)\n",
     "\n",
-    "    # Calculate metrics\n",
     "    train_accuracy = accuracy_score(y_train, y_train_pred)\n",
     "    train_recall = recall_score(y_train, y_train_pred)\n",
     "    train_precision = precision_score(y_train, y_train_pred)\n",
@@ -220,7 +195,6 @@
     "    test_precision = precision_score(y_test, y_test_pred)\n",
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
-    "    # Store results in a dictionary\n",
     "    result_dict = {\n",
     "        'kernel': params['kernel'],\n",
     "        'degree': params['degree'],\n",
@@ -237,16 +211,12 @@
     "        'test_f1': test_f1\n",
     "    }\n",
     "\n",
-    "    # Append the result dictionary to the list\n",
     "    results_list.append(result_dict)\n",
     "\n",
-    "# Convert the results list to a DataFrame\n",
     "results_df = pd.DataFrame(results_list)\n",
     "\n",
-    "# Save results to CSV\n",
     "results_df.to_csv('svm_grid_tfidf_lin_sig.csv', index=False)\n",
     "\n",
-    "# Show the evaluation DataFrame\n",
     "print(results_df)\n"
    ]
   },
@@ -303,85 +273,7 @@
      ]
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
-    "# Initialize an empty list to store results\n",
-    "results_list = []\n",
-    "\n",
-    "# Define parameter grid\n",
-    "param_grid = {\n",
-    "    'kernel': ['rbf', 'poly'],\n",
-    "    'degree': [3, 4, 5],\n",
-    "    'C': [0.01, 0.1, 1],\n",
-    "    'gamma': [0.01, 0.1, 1],\n",
-    "    'random_state': [42],\n",
-    "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}]\n",
-    "}\n",
-    "\n",
-    "# Initialize SVM model\n",
-    "svm = SVC()\n",
-    "\n",
-    "# Initialize GridSearchCV\n",
-    "grid_search = GridSearchCV(estimator=svm, param_grid=param_grid, scoring='f1', cv=3, verbose=2, n_jobs=-1)\n",
-    "\n",
-    "# Fit GridSearchCV\n",
-    "grid_search.fit(X_train, y_train)\n",
-    "\n",
-    "# Loop through all the parameter combinations and calculate metrics\n",
-    "for params in grid_search.cv_results_['params']:\n",
-    "    # Get the model for this configuration\n",
-    "    best_model = grid_search.best_estimator_\n",
-    "\n",
-    "    # Predict on training data\n",
-    "    y_train_pred = best_model.predict(X_train)\n",
-    "\n",
-    "    # Predict on test data\n",
-    "    y_test_pred = best_model.predict(X_test)\n",
-    "\n",
-    "    # Calculate metrics\n",
-    "    train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "    train_recall = recall_score(y_train, y_train_pred)\n",
-    "    train_precision = precision_score(y_train, y_train_pred)\n",
-    "    train_f1 = f1_score(y_train, y_train_pred)\n",
-    "\n",
-    "    test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "    test_recall = recall_score(y_test, y_test_pred)\n",
-    "    test_precision = precision_score(y_test, y_test_pred)\n",
-    "    test_f1 = f1_score(y_test, y_test_pred)\n",
-    "\n",
-    "    # Store results in a dictionary\n",
-    "    result_dict = {\n",
-    "        'kernel': params['kernel'],\n",
-    "        'degree': params['degree'],\n",
-    "        'C': params['C'],\n",
-    "        'gamma': params['gamma'],\n",
-    "        'class_weight': params['class_weight'],\n",
-    "        'train_accuracy': train_accuracy,\n",
-    "        'train_recall': train_recall,\n",
-    "        'train_precision': train_precision,\n",
-    "        'train_f1': train_f1,\n",
-    "        'test_accuracy': test_accuracy,\n",
-    "        'test_recall': test_recall,\n",
-    "        'test_precision': test_precision,\n",
-    "        'test_f1': test_f1\n",
-    "    }\n",
-    "\n",
-    "    # Append the result dictionary to the list\n",
-    "    results_list.append(result_dict)\n",
-    "\n",
-    "# Convert the results list to a DataFrame\n",
-    "results_df = pd.DataFrame(results_list)\n",
-    "\n",
-    "# Save results to CSV\n",
-    "results_df.to_csv('svm_grid_tfidf_poly_rbf.csv', index=False)\n",
-    "\n",
-    "# Show the evaluation DataFrame\n",
-    "print(results_df)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
