--- a/src/2. Classical ML Methods/sven/NB.ipynb
+++ b/src/2. Classical ML Methods/sven/NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "0d9ec666-3144-4ba2-976b-c91b5fe258bf",
    "metadata": {},
    "outputs": [],
@@ -19,13 +19,23 @@
     "    precision_score,\n",
     "    classification_report,\n",
     ")\n",
-    "import vectorize_functions\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "912e8841-6859-47e5-b924-f5ac52de66f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import vectorize_functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "f636600b-8b3e-4bba-9b02-5f3733f11b4d",
    "metadata": {},
    "outputs": [],
@@ -345,21 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "9762cf1d-8940-49db-a4bb-76b69f4a7831",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.708499095840868\n",
-      "F1 Score: 0.2716867469879518\n",
-      "Recall: 0.833641404805915\n",
-      "Precision: 0.16228859301907161\n",
-      "      0     1\n",
-      "0  5426  2328\n",
-      "1    90   451\n"
+     "ename": "NameError",
+     "evalue": "name 'y_pred_w2v' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m evaluate(y_test_w2v, \u001b[43my_pred_w2v\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_pred_w2v' is not defined"
      ]
     }
    ],
@@ -789,6 +797,274 @@
    "source": [
     "Recall besser, alle anderen schlechter als oben"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcce5a26-cdc4-46a9-83d1-bf54813f34e4",
+   "metadata": {},
+   "source": [
+    "## Evaluation neue Vectorize-Funktionen (08.12.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e5d1b5ff-2a21-4fc2-80d0-0ab9d8cd8671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ../../functions/vectorize_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "512a7731-bbeb-4a1a-89f5-eb2b208d84c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath_name = (('../../../data/twitter_hate-speech/train_cleaned.csv'))\n",
+    "df_cleaned = pd.read_csv(filepath_name, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d73a06de-70e1-4076-907b-66d3205c5922",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tfidf, X_test_tfidf, y_train_tfidf, y_test_tfidf = vectorize_tfidf(df=df_cleaned, text_column='tweet_cleaned', \n",
+    "                                                                                 label_column=\"label\")\n",
+    "X_train_w2v, X_test_w2v, y_train_w2v, y_test_w2v = vectorize_w2v(df=df_cleaned, text_column =\"tweet_cleaned\", label_column=\"label\")\n",
+    "X_train_glv, X_test_glv, y_train_glv, y_test_glv = vectorize_glove(df=df_cleaned, text_column='tweet_cleaned', \n",
+    "                                                                                 label_column=\"label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2a198a29-26dc-4c6c-8155-b307c8bd7c16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13737, 4925)\n",
+      "(5888, 4925)\n",
+      "(13737,)\n",
+      "(5888,)\n",
+      "<class 'scipy.sparse._csr.csr_matrix'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train_tfidf.shape)\n",
+    "print(X_test_tfidf.shape)\n",
+    "print(y_train_tfidf.shape)\n",
+    "print(y_test_tfidf.shape)\n",
+    "print(type(X_train_tfidf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d012c6c6-6df3-4d6d-acf6-c1a0456995f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_tfidf = MultinomialNB()\n",
+    "clf_tfidf.fit(X_train_tfidf,y_train_tfidf)\n",
+    "y_pred_tfidf = clf_tfidf.predict(X_test_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9d37edd1-4623-4c6d-af74-07119a2e79ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9458220108695652\n",
+      "F1 Score: 0.27334851936218685\n",
+      "Recall: 0.16042780748663102\n",
+      "Precision: 0.9230769230769231\n",
+      "      0   1\n",
+      "0  5509   5\n",
+      "1   314  60\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(y_test_tfidf, y_pred_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "713516c3-e398-4220-829f-c035d2d4ccdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_tfidf_comp = ComplementNB()\n",
+    "clf_tfidf_comp.fit(X_train_tfidf,y_train_tfidf)\n",
+    "y_pred_tfidf_comp = clf_tfidf_comp.predict(X_test_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d04fa54a-f46a-4b92-9bc8-c2a0733b3077",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8566576086956522\n",
+      "F1 Score: 0.4089635854341736\n",
+      "Recall: 0.7807486631016043\n",
+      "Precision: 0.27703984819734345\n",
+      "      0    1\n",
+      "0  4752  762\n",
+      "1    82  292\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(y_test_tfidf, y_pred_tfidf_comp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "74bd8c26-a5fe-4095-b832-d3264c8f73b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 14 candidates, totalling 42 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\svenw\\miniconda3\\lib\\site-packages\\sklearn\\naive_bayes.py:624: FutureWarning: The default value for `force_alpha` will change to `True` in 1.4. To suppress this warning, manually set the value of `force_alpha`.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\svenw\\miniconda3\\lib\\site-packages\\sklearn\\naive_bayes.py:633: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10. Use `force_alpha=True` to keep alpha unchanged.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\svenw\\miniconda3\\lib\\site-packages\\sklearn\\naive_bayes.py:624: FutureWarning: The default value for `force_alpha` will change to `True` in 1.4. To suppress this warning, manually set the value of `force_alpha`.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\svenw\\miniconda3\\lib\\site-packages\\sklearn\\naive_bayes.py:633: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10. Use `force_alpha=True` to keep alpha unchanged.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    alpha   norm  train_accuracy  train_recall  train_precision  train_f1  \\\n",
+      "0    0.00   True        0.487151      1.000000         0.116614  0.208871   \n",
+      "1    0.00  False        0.949989      0.979570         0.576947  0.726186   \n",
+      "2    0.01   True        0.735459      1.000000         0.203769  0.338551   \n",
+      "3    0.01  False        0.936667      0.979570         0.517026  0.676820   \n",
+      "4    0.10   True        0.888112      0.979570         0.375051  0.542423   \n",
+      "5    0.10  False        0.911116      0.972043         0.430681  0.596897   \n",
+      "6    0.25   True        0.931644      0.913978         0.497367  0.644183   \n",
+      "7    0.25  False        0.894591      0.949462         0.386602  0.549471   \n",
+      "8    0.50   True        0.950571      0.830108         0.597061  0.694557   \n",
+      "9    0.50  False        0.883308      0.916129         0.358435  0.515271   \n",
+      "10   0.75   True        0.955012      0.759140         0.641818  0.695567   \n",
+      "11   0.75  False        0.882725      0.893548         0.354673  0.507791   \n",
+      "12   1.00   True        0.956541      0.710753         0.668352  0.688900   \n",
+      "13   1.00  False        0.886875      0.869892         0.360839  0.510088   \n",
+      "\n",
+      "    test_accuracy  test_recall  test_precision   test_f1  \n",
+      "0        0.470958     0.946524        0.102638  0.185195  \n",
+      "1        0.916950     0.491979        0.380952  0.429405  \n",
+      "2        0.703465     0.927807        0.167957  0.284426  \n",
+      "3        0.912024     0.727273        0.395349  0.512241  \n",
+      "4        0.855978     0.844920        0.285714  0.427027  \n",
+      "5        0.879755     0.820856        0.323840  0.464448  \n",
+      "6        0.904212     0.772727        0.376302  0.506130  \n",
+      "7        0.856488     0.823529        0.283349  0.421629  \n",
+      "8        0.921705     0.660428        0.425129  0.517277  \n",
+      "9        0.848845     0.820856        0.271681  0.408245  \n",
+      "10       0.926291     0.614973        0.442308  0.514541  \n",
+      "11       0.851393     0.807487        0.273303  0.408384  \n",
+      "12       0.927989     0.558824        0.446581  0.496437  \n",
+      "13       0.856658     0.780749        0.277040  0.408964  \n"
+     ]
+    }
+   ],
+   "source": [
+    "results_list = []\n",
+    "\n",
+    "param_grid = {\n",
+    "    'alpha' : [0, 0.01, 0.1, 0.25, 0.5, 0.75, 1],\n",
+    "    'norm' : [True, False]\n",
+    "}\n",
+    "\n",
+    "cnb = ComplementNB()\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=cnb, param_grid=param_grid, scoring='f1', cv=3, verbose=2, n_jobs=-1)\n",
+    "\n",
+    "grid_search.fit(X_train_tfidf, y_train_tfidf)\n",
+    "\n",
+    "for params in grid_search.cv_results_['params']:\n",
+    "    model = ComplementNB(**params)  \n",
+    "    model.fit(X_train_tfidf, y_train_tfidf)  \n",
+    "\n",
+    "    y_train_pred_tfidf = model.predict(X_train_tfidf)\n",
+    "\n",
+    "    y_test_pred_tfidf = model.predict(X_test_tfidf)\n",
+    "\n",
+    "    train_accuracy = accuracy_score(y_train_tfidf, y_train_pred_tfidf)\n",
+    "    train_recall = recall_score(y_train_tfidf, y_train_pred_tfidf)\n",
+    "    train_precision = precision_score(y_train_tfidf, y_train_pred_tfidf)\n",
+    "    train_f1 = f1_score(y_train_tfidf, y_train_pred_tfidf)\n",
+    "\n",
+    "    test_accuracy = accuracy_score(y_test_tfidf, y_test_pred_tfidf)\n",
+    "    test_recall = recall_score(y_test_tfidf, y_test_pred_tfidf)\n",
+    "    test_precision = precision_score(y_test_tfidf, y_test_pred_tfidf)\n",
+    "    test_f1 = f1_score(y_test_tfidf, y_test_pred_tfidf)\n",
+    "\n",
+    "    result_dict = {\n",
+    "        'alpha': params['alpha'],\n",
+    "        'norm': params['norm'],\n",
+    "        'train_accuracy': train_accuracy,\n",
+    "        'train_recall': train_recall,\n",
+    "        'train_precision': train_precision,\n",
+    "        'train_f1': train_f1,\n",
+    "        'test_accuracy': test_accuracy,\n",
+    "        'test_recall': test_recall,\n",
+    "        'test_precision': test_precision,\n",
+    "        'test_f1': test_f1\n",
+    "    }\n",
+    "\n",
+    "    results_list.append(result_dict)\n",
+    "\n",
+    "results_df = pd.DataFrame(results_list)\n",
+    "\n",
+    "results_df.to_csv('cnb_grid_tfidf.csv', index=False)\n",
+    "\n",
+    "print(results_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c8f2d7-ef26-43d9-abb0-50f46d27931c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
